[package]
name = "wasm-toml-js"
version = "0.1.2"
authors = ["sigoden <sigoden@gmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/sigoden/wasm-toml-js"
repository = "https://github.com/sigoden/wasm-toml-js"
license = "MIT"
keywords = ["toml","parser"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
toml = { version = "0.5.6", features = ["preserve_order"] }
serde_json = { version = "1.0.52", features = ["preserve_order"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
